; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/rtc/extr_rtc-sh.c_sh_rtc_periodic.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/rtc/extr_rtc-sh.c_sh_rtc_periodic.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sh_rtc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @sh_rtc_periodic to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sh_rtc_periodic(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.sh_rtc*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = bitcast i8* %7 to %struct.sh_rtc*
  store %struct.sh_rtc* %8, %struct.sh_rtc** %5, align 8
  %9 = load %struct.sh_rtc*, %struct.sh_rtc** %5, align 8
  %10 = getelementptr inbounds %struct.sh_rtc, %struct.sh_rtc* %9, i32 0, i32 0
  %11 = call i32 @spin_lock(i32* %10)
  %12 = load %struct.sh_rtc*, %struct.sh_rtc** %5, align 8
  %13 = call i32 @__sh_rtc_periodic(%struct.sh_rtc* %12)
  store i32 %13, i32* %6, align 4
  %14 = load %struct.sh_rtc*, %struct.sh_rtc** %5, align 8
  %15 = getelementptr inbounds %struct.sh_rtc, %struct.sh_rtc* %14, i32 0, i32 0
  %16 = call i32 @spin_unlock(i32* %15)
  %17 = load i32, i32* %6, align 4
  %18 = call i32 @IRQ_RETVAL(i32 %17)
  ret i32 %18
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @__sh_rtc_periodic(%struct.sh_rtc*) #1

declare dso_local i32 @spin_unlock(i32*) #1

declare dso_local i32 @IRQ_RETVAL(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
